[tool.poetry]
name = "uvr-headless-runner"
version = "1.1.0"
description = "CLI audio source separation powered by Ultimate Vocal Remover — separate vocals, instruments, drums from any audio"
authors = ["UVR Headless Runner Contributors"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/chyinan/uvr-headless-runner"
repository = "https://github.com/chyinan/uvr-headless-runner"
keywords = [
    "audio", "vocal-remover", "source-separation", "uvr",
    "demucs", "mdx-net", "roformer", "music", "cli"
]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
]

# Include root-level modules and sub-packages
packages = [
    # CLI and runners
    {include = "cli.py"},
    {include = "mdx_headless_runner.py"},
    {include = "demucs_headless_runner.py"},
    {include = "vr_headless_runner.py"},
    # Shared modules
    {include = "model_downloader.py"},
    {include = "error_handler.py"},
    {include = "progress.py"},
    {include = "separate.py"},
    {include = "UVR.py"},
    {include = "__version__.py"},
    # Sub-packages (upstream UVR code)
    {include = "demucs"},
    {include = "lib_v5"},
    {include = "gui_data"},
]

# Include non-Python data files
include = [
    "models/**/*.json",
    "models/**/*.yaml",
    "models/**/*.txt",
    "lib_v5/**/*.json",
    "lib_v5/**/*.ckpt",
    "gui_data/**/*.json",
    "gui_data/**/*.txt",
]

[tool.poetry.dependencies]
python = "^3.9,<3.11"

# Core dependencies
numpy = "1.23.5"
scipy = "1.9.3"
librosa = "0.9.2"
soundfile = "0.11.0"
audioread = "3.0.0"
resampy = "0.4.2"

# Model dependencies
pytorch-lightning = "2.0.0"
einops = "^0.8.0"
ml-collections = "0.1.1"
omegaconf = "2.2.3"
onnx = "*"
onnx2pytorch = "*"

# Roformer/SCNet specific
rotary-embedding-torch = "^0.8.0"
beartype = "^0.15"
# transformers = "^4.35"  # 可选，按需安装

# Audio processing
julius = "0.2.7"
pydub = "0.25.1"
pyrubberband = "0.3.0"
samplerate = "^0.2.3"

# Utilities
PyYAML = "6.0"
natsort = "8.2.0"
tqdm = "*"
requests = ">=2.28"
rich = ">=13.0"

# Optional - for ONNX GPU inference
# Install manually: pip install onnxruntime-gpu
diffq = "^0.2.4"
onnxruntime = ">=1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
uvr = "cli:main"
uvr-mdx = "mdx_headless_runner:main"
uvr-demucs = "demucs_headless_runner:main"
uvr-vr = "vr_headless_runner:main"
